; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_process_all_audio_actions.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_process_all_audio_actions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_scene_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_scene_item*, i64)* @process_all_audio_actions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_all_audio_actions(%struct.obs_scene_item* %0, i64 %1) #0 {
  %3 = alloca %struct.obs_scene_item*, align 8
  %4 = alloca i64, align 8
  store %struct.obs_scene_item* %0, %struct.obs_scene_item** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %5

5:                                                ; preds = %10, %2
  %6 = load %struct.obs_scene_item*, %struct.obs_scene_item** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i64 @apply_scene_item_volume(%struct.obs_scene_item* %6, i32* null, i32 0, i64 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %5
  br label %5

11:                                               ; preds = %5
  ret void
}

declare dso_local i64 @apply_scene_item_volume(%struct.obs_scene_item*, i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
